docs/public/css/outils/latestprojects.css
@import url(color.css);

section.latestprojectstitre {
    background-color: var(--backgroundaccueil);
    display: inline;
}

.latestprojectstitre {
    display: flex;
    gap: 1rem;
    padding: 5rem;
    width: 100%;
    color: #000000;
    display: grid;
    place-items: center;
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.latestprojectstitre h1 {
    font-size: 2.5rem;
    color: #000000;
    padding: 0px;
}

.projects-section {
    display: flex;
    flex-wrap: wrap;
    background-color: var(--backgroundaccueil);
    gap: var(--gapimage);
    padding-top: 30px;
    padding-bottom: 30px;
    padding-inline: var(--espacecote);
    overflow: hidden;
    margin-top: 0px;
}

.cinquantecolum {
    width: calc(66.66% - (var(--gapimage) / 2));
    display: flex;
    flex-direction: column;
    gap: var(--gapimage);
}

.containtrois {
    gap: var(--gapimage);
    display: flex;
    flex-direction: row;
}

.project-paneldeux {
    width: 100%;
    /* Mettre à 30% de la largeur du conteneur */
    position: relative;
    overflow: hidden;
    transition: 1s ease-in-out;
    border-radius: var(--anglesindex);
    display: flex;
    max-height: 75vh;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

.project-panel {
    width: calc(50% - (var(--gapimage) / 2));
    /* Mettre à 30% de la largeur du conteneur */
    position: relative;
    overflow: hidden;
    transition: 1s ease-in-out;
    border-radius: var(--anglesindex);
    display: flex;
    word-wrap: break-word;
    overflow-wrap: break-word;

}


.project-panel3 {
    width: calc(33.33% - (var(--gapimage) / 2));
    /* Mettre à 30% de la largeur du conteneur */
    position: relative;
    overflow: hidden;
    transition: 1s ease-in-out;
    border-radius: var(--anglesindex);
    display: flex;
    word-wrap: break-word;
    overflow-wrap: break-word;
    max-height: 100vh;
}

.project-panel a {
    object-fit: cover;
}

.project-paneldeux a {
    object-fit: cover;
}

.project-panel3 a {
    object-fit: cover;
}

.project-panel1 {
    width: 100%;
    /* Mettre à 30% de la largeur du conteneur */
    position: relative;
    overflow: hidden;
    transition: 1s ease-in-out;
    border-radius: var(--anglesindex);
    display: flex;
    max-height: 75vh;
    height: fit-content;
    object-fit: cover;
    justify-items: center;
    align-items: center;
}

/* Image principale du projet */

.titre {
    display: flex;
    justify-items: center;
    align-items: center;

}

.titre img {
    height: 2rem;
    margin-left: 1rem;
}

.project-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: 1s ease;
    position: relative;
    display: flex;
    filter: brightness(85%);
}

.project-image:hover {
    filter: brightness(100%);
    scale: 1.1;
}

.transition-link {
    border-radius: 3rem;
}

.project-panel:hover div.petitbouton {
    opacity: 1;
    scale: 1;
    top: 0;
    left: 0;
    padding: 15px;
}

.project-paneldeux:hover div.petitbouton {
    opacity: 1;
    scale: 1;
    top: 0;
    left: 0;
    padding: 15px;
}

.project-panel3:hover div.petitbouton {
    opacity: 1;
    scale: 1;
    top: 0;
    left: 0;
    padding: 15px;
}

.project-panel1:hover div.petitbouton {
    opacity: 1;
    scale: 1;
    top: 0;
    left: 0;
    padding: 15px;
}

.petitbouton {
    display: flex;
    padding: 30px;
    position: absolute;
    flex-direction: row;
    top: 0;
    left: 0;
    gap: 15px;
    z-index: 3;
    /* Place la vidéo derrière le contenu */
    scale: 1;
    opacity: 0;
    transition: 0.5s ease;
    pointer-events: none;
    flex-wrap: wrap;
}

.infoprojets {
    position: absolute;
    z-index: 3;
    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
    bottom: 0px;
    left: 0px;
    padding: 20px 20px 20px 20px;
    width: 100%;
    gap: 0px;
    display: flex;
    flex-direction: column;
    pointer-events: none;
    user-select: none;

}

.infoprojets h1 {
    font-size: 2rem;
    padding: 0;
    margin: 0;
    color: var(--typo-blanche);
    text-transform: uppercase;
    line-height: 1.1;

}

.imagelastproject {
    border-radius: 8rem;
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: 1s ease;
    position: relative;
    display: flex;
}

.infoprojets p {
    padding: 0;
    margin: 0;
    color: var(--typo-blanche);
    font-size: 0.8rem;
    letter-spacing: 0.05em !important;
    text-transform: uppercase;
}

.titreprojet img {
    width: 2rem;
}

.titreprojet {
    display: flex;
    flex-direction: row;
    gap: 1rem;
}




@media (max-width: 768px) {

    .latestprojectstitre {
        padding: 2rem var(--espacecote);
    }

    .infoprojets H1 {
        font-size: 2.5rem;
        padding: 0;
        margin: 0;
        white-space: nowrap;
    }

    .projects-section {
        display: flex;
        flex-wrap: wrap;
        /* Permet aux panneaux de s'enrouler si l'espace est insuffisant */
        align-items: center;
        flex-shrink: 2;
        gap: 2rem;

    }

    .projects-section img {
        width: 100%;
        object-fit: cover;
        scale: 1.1;

    }

    .project-panel {
        width: 100%;
        /* Mettre à 30% de la largeur du conteneur */
        display: flex;


    }

    .project-panel1 {
        width: 100%;
        /* Mettre à 30% de la largeur du conteneur */
        position: relative;
        overflow: hidden;
        transition: 1s ease-in-out;
        border-radius: var(--anglesindex);
        display: flex;
        max-height: fit-content;
        object-fit: cover;
        justify-items: center;
        align-items: center;
    }

    .project-panel1 img {
        width: 100%;
        /* Mettre à 30% la largeur du conteneur */
        height: 300px;
        display: flex;
        padding: 0px;
        margin: 0px;
    }

    .project-panel1 {
        width: 100%;
        /* Mettre à 30% la largeur du conteneur */
        height: 500px;
        display: flex;
        background-color: blanchedalmond;

    }

    .petitbouton {
        display: flex;
        padding: 1rem;
        position: absolute;
        flex-direction: row;
        top: 0;
        left: 0;
        gap: 15px;
        z-index: 3;
        /* Place la vidéo derrière le contenu */
        scale: 1;
        opacity: 1;
        transition: 0.5s ease;
        pointer-events: none;
        align-items: center;
    }

    .infoprojets {
        bottom: 0px;
        left: 0px;
        gap: 0px;
    }

    .titreprojet img {
        width: 1rem;
        margin: 0px;
        padding: 0px;
        display: none;
    }

    .titreprojet {
        white-space: normal;
        gap: 1rem;

    }

    .infoprojets H1 {
        font-size: 2rem;
        padding: 0;
        margin: 0;
        white-space: normal;
    }

    .infoprojets p {
        padding: 0;
        margin: 0;
        font-size: 1rem;
        text-transform: uppercase;
    }

    .containtrois {
        gap: var(--gapimage);
        display: flex;
        flex-direction: column;
    }

    .cinquantecolum {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: var(--gapimage);
    }


}

